--- a/frontend/src/styles/layouts/Rootlayout.css
+++ b/frontend/src/styles/layouts/Rootlayout.css
@@ -23,4 +23,10 @@
     width: 100%;
     display: flex;
     overflow-y: auto;
+
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+        
+        display: none;
+    }
 }
